--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <!--<app-app-font-size1></app-app-font-size1>-->
 <!--<app-pet-image></app-pet-image>-->
 
+<app-app-font-size1></app-app-font-size1>
+<app-calculator></app-calculator>
 <app-hacker-news></app-hacker-news>
+<app-name-card cardName="Professional Dev" email="hello@abc.xyz" phone="0123456789"></app-name-card>
+<app-progress-bar width="65"></app-progress-bar>
