--- a/src/app/hacker-news/hacker-news.component.html
+++ b/src/app/hacker-news/hacker-news.component.html
@@ -40,9 +40,8 @@
     <a href="{{art.url}}" target="_blank">{{art.title}}</a>
     <app-likes></app-likes>
   </div>
-  <textarea [(ngModel)]="article.title" cols="70"></textarea>
-  <textarea [(ngModel)]="article.url" cols="70"></textarea>
+  <textarea [value]="article.title"  cols="70"></textarea>
+  <textarea [value]="article.url" cols="70"></textarea>
   <button (click)="addArticle()">Add</button>
 </div>
 <hr>
-@CodeGym, 2019
