--- a/src/app/hacker-news/hacker-news.component.html
+++ b/src/app/hacker-news/hacker-news.component.html
@@ -38,7 +38,7 @@
 <div>
   <div *ngFor="let art of articles">
     <a href="{{art.url}}" target="_blank">{{art.title}}</a>
-    <app-likes></app-likes>
+    <app-likes [likes]="art.like"></app-likes>
   </div>
   <textarea [value]="article.title"  cols="70"></textarea>
   <textarea [value]="article.url" cols="70"></textarea>
