--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-login></app-login>
-<app-register-final></app-register-final>
+<nav>
+  <a routerLink="timelines" class="link"> Ứng dụng tính thời gian </a>
+</nav>
+<router-outlet></router-outlet>
